Add VPC_onPrem file for VPN

--- a/VPC+subnet.yaml
+++ b/VPC+subnet.yaml
@@ -155,3 +155,5 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref NatGatewayA
       RouteTableId: !Ref PrivateRouteTableC      
+
+      VOIR POUR METTRE MAIN LE SUBNET C
