update VPC file

--- a/VPC+subnets V3.yml
+++ b/VPC+subnets V3.yml
@@ -11,22 +11,16 @@ Resources:
       CidrBlock: 192.168.0.0/16
       Tags:
         - Key: Name
-          Value: 'VPC-P10'
-#
-# Create the private subnet
-#
+          Value: 'MainVPC'
   PrivateSubnetC:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: us-east-1c
-      CidrBlock: 192.168.0.0/24
+      AvailabilityZone: us-east-1a
+      CidrBlock: 192.168.2.0/24
       Tags:
         - Key: Name
-          Value: 'VPC-P10-private'
+          Value: 'MainVPC-private-a'
       VpcId: !Ref MyVPC
-#
-# Create the public subnet
-#
   PublicSubnetA:
     Type: AWS::EC2::Subnet
     Properties:
@@ -34,35 +28,31 @@ Resources:
       CidrBlock: 192.168.10.0/24
       Tags:
         - Key: Name
-          Value: 'VPC-P10-public-a'
+          Value: 'MainVPC-private-a'
       VpcId: !Ref MyVPC
   PublicSubnetB:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: us-east-1b
-      CidrBlock: 192.168.110.0/24
+      CidrBlock: 192.168.11.0/24
       Tags:
         - Key: Name
-          Value: 'VPC-P10-public-b'
+          Value: 'MainVPC-private-a'
       VpcId: !Ref MyVPC
 #
 #  Gateway configuration with 2 NAT gateway and elastic IP
-#  First Create and attache the gateway to the VPC
 #
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties: 
       Tags:
         - Key: Name
-          Value: 'VPC-P10-InternetGateway'
+          Value: 'MainVPC-InternetGateway'
   AttachInternetGateway:
     Type: 'AWS::EC2::VPCGatewayAttachment'
     Properties:
       VpcId: !Ref MyVPC
       InternetGatewayId: !Ref InternetGateway
-#
-#  Create elastique IP for the NAT gateway
-#
   NatEipA:
     Type: AWS::EC2::EIP
     Properties:
@@ -71,9 +61,6 @@ Resources:
     Type: AWS::EC2::EIP
     Properties:
       Domain: vpc
-#
-#  Create the NAT gateway and attache elastique IP
-#
   NatGatewayA:
     DependsOn: AttachInternetGateway
     Type: AWS::EC2::NatGateway
@@ -101,7 +88,7 @@ Resources:
       VpcId: !Ref MyVPC
       Tags:
         - Key: Name
-          Value: VPC-P10-Public-route-a
+          Value: MainVPC-route-public-a
   AttachPublicRouteTableA:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -113,16 +100,14 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
       RouteTableId: !Ref PublicRouteTableA
-#
-# Create route table B
-#
+      
   PublicRouteTableB:
     Type: AWS::EC2::RouteTable
     Properties: 
       VpcId: !Ref MyVPC
       Tags:
         - Key: Name
-          Value: VPC-P10-Public-route-b
+          Value: MainVPC-route-public-b
   AttachPublicRouteTableB:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -143,7 +128,7 @@ Resources:
       VpcId: !Ref MyVPC
       Tags:
         - Key: Name
-          Value: VPC-P10-Private-route-c
+          Value: MainVPC-route-private-c
   AttachPrivateRouteTableC:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -154,6 +139,4 @@ Resources:
     Properties: 
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref NatGatewayA
-      RouteTableId: !Ref PrivateRouteTableC      
-
-      VOIR POUR METTRE MAIN LE SUBNET C
+      RouteTableId: !Ref PrivateRouteTableC     
